<resources>
    <string name="app_name">Калькулятор</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_clean">Очистить</string>
    <string name="button_result">=</string>
    <string name="button_sum">+</string>
    <string name="button_minus">-</string>
    <string name="button_div">/</string>
    <string name="button_multiplication">*</string>
    <string name="button_point">.</string>
    <string name="textInTextView">0</string>
    <string name="action_settings">Настройки</string>
    <string name="action_url">На страницу</string>
    <string name="tv_settings_style">Темная/Светлая</string>
</resources>